--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^18.2.0",
     "react-hover-video-player": "^10.0.1",
     "react-icons": "^5.0.1",
+    "react-player": "^2.14.1",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "swiper": "^11.0.6",
     "web-vitals": "^2.1.4"
